Added price detection

--- a/backend/config.json
+++ b/backend/config.json
@@ -1,5 +1,6 @@
 {
   "DISEASE_API_KEY": "AIzaSyAIiMC6ZLZCZXbfwaugtpVfoqvc3APMdtk",
-  "PRICING_API_KEY": "your-pricing-api-key-here",
+  "PRICING_API_KEY": "579b464db66ec23bdd0000010baed15d539144fa62035eb3cd19e551",
+  "PRICING_BASE_URL": "https://api.data.gov.in/resource/35985678-0d79-46b4-9ed6-6f13308a1d24",
   "SCHEMES_API_KEY": "your-schemes-api-key-here"
 }
